# mountain_tai

./: .gitignore  .gitreview  README.rst  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
docker_scheduler/: container.py  image.py  setup.py
docker_scheduler/api/docker_scheduler/: manage.py
docker_scheduler/api/docker_scheduler/docker_scheduler/: settings.py  urls.py  wsgi.py
docker_scheduler/api/docker_scheduler/docker_scheduler/apphome/: admin.py  models.py  serializers.py  views.py
docker_scheduler/api/docker_scheduler/docker_scheduler/controller/v1/: urls.py  urls_containers.py  urls_flavors.py  urls_hosts.py  urls_images.py
docker_scheduler/api/docker_scheduler/docker_scheduler/controller/v1/views/: serializers.py  views_containers.py  views_flavors.py  views_hosts.py  views_images.py
docker_scheduler/api/docker_scheduler/docker_scheduler/workflow/: container.py  host.py  image.py
docker_scheduler/docker_scheduler/lib/: schedulerapi.py
docker_scheduler/docker_scheduler/lib/dockerconfig/: setting.py
docker_scheduler/lib/: host.py  models.py
etc/: docker_scheduler.conf.sample
etc/apache/: docker_scheduler
etc/init/: mountain-tai.conf
etc/logrotate.d/: mountain-tai
etc/mountain/: mountain.conf  mountain.conf.sample
mountain_tai/: config.py
mountain_tai/lib/: api.py  models.py
sbin/: docker_scheduler.py  dockerapi.py  dockersync.py  models.py  mountain-scheduler  mountain-sync  mountain_tai.py  receiver.py  setting.py  settings.py
