[metadata]
name = mountain_tai
version = 1.0
summary = Mountain_tai
description-file =
    README.rst
author = Frazy
author-email = frazy@thstack.com
home-page = http://www.thstack.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    mountain_tai
